Fixing alignment of tasks

--- a/styles/base.styl
+++ b/styles/base.styl
@@ -1,9 +1,9 @@
 body
 	background-color #FAFAFA;
 
-
-
-
+li {
+  list-style-type: none;
+}
 
 .hidden {
   visibility: hidden ;
